--- a/005-praticando-html/index.html
+++ b/005-praticando-html/index.html
@@ -22,8 +22,71 @@
         <img src="img/Plataformas.png" alt="Um monitor e um celular com Alura+ abrerto" class="secundario__images">
         <div class="secundario__descricao">
             <h2 class="secundario__titulo">Assista do seu jeito</h2>
-            <p class="secundario__descricao"></p>
+            <p class="secundario__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <div class="secundario__descricao">
+            <p class="secundario__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao">Assine o Combo+</a>
+        </div>
+        <img src="img/Telas.png" alt="Tela da alura plus e do alura lingua" class="secundario__images">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Um notebook aberto em um curso da alura" class="secundario__images">
+        <div class="secundario__descricao">
+            <h2 class="secundario__titulo">Baixe seus cursos</h2>
+            <p class="secundario__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="img/tv.png" alt="Icone televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="Icone computador">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="Icone celular">
+                <h3 class="lista__item">Celular</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li>
+                <a href="#" class="lista__link">Idioma</a>
+            </li>
+            <li>
+                <a href="#" class="lista__link">Dispositivos compatíveis</a>
+            </li>
+            <li>
+                <a href="#" class="lista__link">Contrato de assinatura</a>
+            </li>
+            <li>
+                <a href="#" class="lista__link">Politica de privacidade</a>
+            </li>
+            <li>
+                <a href="#" class="lista__link">Proteção de dados no Brasil</a>
+            </li>
+            <li>
+                <a href="#" class="lista__link">Anuncios personalizados</a>
+            </li>
+            <li>
+                <a href="#" class="lista__link">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
